# siktacka

client/: CMakeLists.txt  client.cpp  client.h  event.cpp  event.h  game.cpp  game.h  parser.cpp  parser.h  utils.cpp  utils.h
gui/: Makefile
task descriptions/: opis-testow.txt
